compiler/testData/checkerWithErrorTypes/full/cast/IsReifiedDisallow.jet
class MyList<A>

fun ff(l: MyList<String>) = l is <!INCOMPATIBLE_TYPES!>MyList<Int><!>
